# StoreManager

./: CMakeLists.txt  main.cpp
engine/: AppEngine.cpp  AppEngine.h
entity/: Item.cpp  Item.h
entity/CannedItem/: CannedItem.cpp  CannedItem.h
entity/ClothingItem/: ClothingItem.cpp  ClothingItem.h
entity/Item/: Item.cpp  Item.h
entity/OrganicItem/: OrganicItem.cpp  OrganicItem.h
entity/ShoppingCart/: ShoppingCart.cpp  ShoppingCart.h
